<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.epicstudios.primeorcompositepro.FindPrime"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/findPTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/find_p"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Blue" />

    <EditText
        android:id="@+id/findPEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/findPTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/enter_number"
        android:inputType="number"
        android:textColor="@color/Blue" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/findPSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/findPEditText"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/submit"
        android:textColor="@color/Blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/numSearchedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/findPSubmitButton"
        android:layout_below="@+id/findPSubmitButton"
        android:layout_marginTop="25dp"
        android:text="@string/num_searched"
        android:textColor="@color/Blue"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/primeFoundTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numSearchedTextView"
        android:layout_below="@+id/numSearchedTextView"
        android:layout_marginTop="21dp"
        android:text="@string/prime_found"
        android:textColor="@color/Blue"
        android:textSize="15sp" />

    <ImageButton
        android:id="@+id/backImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/black"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/ic_menu_revert" />

</RelativeLayout>

