<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.epicstudios.primeorcompositepro.ChooseCalc"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/chooseCalcTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/choose_calc"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Blue"
        android:textSize="30sp" />

    <Button
        android:id="@+id/pOrCButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/chooseCalcTextView"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/p_c"
        android:textColor="@color/Blue"
        android:textSize="20sp" />

    <Button
        android:id="@+id/findPButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pOrCButton"
        android:layout_alignRight="@+id/pOrCButton"
        android:layout_below="@+id/pOrCButton"
        android:layout_marginTop="35dp"
        android:text="@string/find_p"
        android:textColor="@color/Blue"
        android:textSize="20sp" />

</RelativeLayout>
